# ovh-cli

./: .gitignore  Account.py  CHANGELOG.rst  LICENSE  LICENSE.txt  README.md  README.rst  ZoneManager.py  ovh-cli  ovh-cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
ovh_cli/: __init__.py  account.py  ovh_cli.py  zone_manager.py
